# tock-1

./: Makefile
arch/cortex-m4f/: Cargo.toml
boards/helium-feather/: Cargo.toml  Makefile  flash-ccfg.jlink
boards/helium-feather-plt/: Cargo.toml  Makefile  flash-ccfg.jlink  flash-kernel.jlink
boards/helium-feather/jtag/: kernel.gdb  session.gdb
boards/helium-feather/src/: cc1312r.rs  cc1352p.rs  cc1352r.rs  ccfg.rs  event_priority.rs  interrupt_table.rs  io.rs  main.rs  uart_echo.rs
boards/launchxl/: Cargo.toml  Makefile  flash-ccfg.jlink  flash-kernel.jlink
capsules/: Cargo.toml
capsules/src/: adc.rs  battery.rs  button.rs  console.rs  driver.rs  gps.rs  i2c_master.rs  lib.rs  nrf51822_serialization.rs  plt.rs  (+6 more)
chips/cc26x2/: Cargo.toml
chips/cc26x2/src/: adc.rs  adi.rs  aon.rs  batmon.rs  ccfg.rs  chip.rs  crt1.rs  event_priority.rs  events.rs  fcfg1.rs  gpio.rs  i2c.rs  ioc.rs  lib.rs  memory_map.rs  osc.rs  peripheral_interrupts.rs  peripherals.rs  power.rs  prcm.rs  pwm.rs  rat.rs  rom.rs  rtc.rs  trng.rs  uart.rs  udma.rs  wdt.rs
chips/cc26x2/src/aux/: anaif.rs  ddi0.rs  evtctl.rs  mod.rs  sysif.rs  timer2.rs
chips/cc26x2/src/cryptoutils/: cryptokey.rs  mod.rs
chips/cc26x2/src/radio/: commands.rs  mod.rs  multimode.rs  queue.rs  rfc.rs  status_codes.rs  test_settings.rs
chips/cc26x2/src/radio/patches/: mod.rs  patch_cpe_multiprotocol.rs  patch_cpe_prop.rs  patch_mce_longrange.rs  patch_mce_slr.rs  patch_rfe_genfsk.rs
chips/cc26x2/src/setup/: ddi.rs  mod.rs  oscfh.rs  ti_driverlib_rom.rs
kernel/: Cargo.toml
tools/: list_boards.sh
(+68 files in other folders)
