[package]
name = "helium-feather"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[[bin]]
name = "helium-feather"
path = "src/main.rs"

[[bin]]
name = "helium-featherccfg"
path = "src/ccfg.rs"

[dependencies]
cortexm4 = { path = "../../arch/cortex-m4" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
cc26x2 = { path = "../../chips/cc26x2" }
fixedvec = "0.2.3"
enum_primitive = { path = "../../libraries/enum_primitive" }
