[package]
name = "cc26x2"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
cortexm = { path = "../../arch/cortex-m" }
cortexm4 = { path = "../../arch/cortex-m4" }
tock_rt0 = { path = "../../libraries/tock-rt0" }
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
bitfield = "0.13.0"
fixedvec = "0.2.3"
